rtpL16depay causes warnings with arbitrary number of channels
The use-case is receiving an arbitrary number of audio channels over RTP and then using audioconvert to mix down to stereo for playout. For a channel count of 9, rtpl16depay can't match one of the predefined layouts (stereo, 5.1 etc.) so it reports "Unknown channel order '(NULL)' for 9 channels" This then causes "WARNING **: Unpositioned audio channel position flag not set but no channel positions present".
udpsrc address=239.150.138.1 port=5004 buffer-size=1000000 caps="application/x-rtp, media=(string)audio, clock-rate=(int)48000, channels = 9, encoding-name=(string)L16" ! rtpL16depay ! audioconvert mix-matrix="<<(float)1.0, (float)0.0, (float)1.0, (float)0.0, (float)1.0, (float)0.0, (float)1.0, (float)0.0, (float)0.0>, <(float)0.0, (float)1.0, (float)1.0, (float)0.0, (float)0.0, (float)1.0, (float)1.0, (float)0.0, (float)0.0>>" ! playsink volume = 5 channels = 2
The attached file was created with the following pipeline: gst-launch-1.0 udpsrc address=239.150.138.1 port=5004 buffer-size=1000000 caps="application/x-rtp, media=(string)audio, clock-rate=(int)48000, channels = 9, encoding-name=(string)L16" ! gdppay ! filesink location=rtpL16-9channels.gdp