rtpLXXdepay: Set the UNPOSITIONED flag on the audio-info when configuring an unpositioned layout

Fixes https://gitlab.freedesktop.org/gstreamer/gst-plugins-good/issues/688